[package]
name = "soshalthing"
version = "0.1.0"
authors = ["misabiko <misabiko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.14.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
env_logger = "0.7.1"
chrono = "0.4.11"